friday finished huzzah

--- a/hons/docs/tExample.tex
+++ b/hons/docs/tExample.tex
@@ -1,4 +1,5 @@
 \chapter{Working Example}
+\label{chapExample}
 
 To demonstrate the major stages and purpose of the simulator we shall make extensive use of the examples in this chapter.
 For simplicity we have chosen to use Bitonic Sorting.
