--- a/hons/docs/tSystems.tex
+++ b/hons/docs/tSystems.tex
@@ -63,7 +63,7 @@ In an actual distribution the assigner would be largely identical to this one, s
 Assignment begins with calculating an SDF graph's repetitions vector, which gives us better estimates on bandwidth and processing requirements.
 For simplicity, actors are not fissed onto different processes, which means their processing requirements are multiplied by their repetitions per steady-state schedule.
 These estimates (bandwidth and computation requirements) are paired with an NPM specification.
-The specification contains details on a concrete instance of an NPM, which the program is expected to run on, such as inter-process bandwidth costs or limitations, and the power, speed, and cost of each of the processes.
+The specification contains details on a concrete instance of an NPM, which the program is expected to run on, such as inter-process bandwidth costs or limitations, and the clock speed or rates per cycle for each of the processes.
 For experimentation purposes many specifications are tested on a single SDF program.
 The estimated costs and the specification together form an instance of an assignment problem.
 The details of the assignment problem (including its complexity) can be found in Chapters \ref{chapModel} and \ref{chapHardness}.
@@ -80,7 +80,7 @@ To this end the exact scheduling algorithm is chosen differently for different t
 These schedules may also be interleaved and variable over multiple steady states, depending again on the experiment being performed.
 
 Finally the program is handed to an executor.
-This module is responsible for invoking actors according to the schedule, recording the statics used for analysis and injecting, and recovering from, faults.
+This module is responsible for invoking actors according to the schedule, recording the statistics used for analysis and injecting, and recovering from, faults.
 Fault injection is described more thoroughly in Section \ref{secSystemFault}, as well as the exact nature of the recovery/resilience systems.
 The executor attempts to follow the order in the schedule, however faults may cause this to be impossible, in which case it records the problem and restarts the simulation.
 It also orchestrates the FIFO buffers used by each actor for inter-process communication, which allows it to strategically fault them by withholding the buffer at times, which would be much like cutting an Ethernet cable in a cloud system.
@@ -94,13 +94,13 @@ Faults must be correctly identified by the processes themselves (which the execu
 The checkpointing FT mechanism is designed to recover either individual actors or the entire network in the event of a fault.
 Periodically during execution the processes in the NPM write their state (RAM in a conventional machine) to disk using conventional tools like databases.
 In the event of a fault, the system rolls back to the last successful state.
-This methodology makes the assumption that the faults occur independently of the system's state, or that pervasive bugs wont cause faults later down the system's pipeline.
+This methodology makes the assumption that the faults occur independently of the system's state, or that persistant bugs will not cause faults later down the system's pipeline.
 When the data itself is causing the faults, then suitable mechanisms would have to be in place to detect and correct for this, however this work will presume that the data is not fault-causing and the actor code is bug-free.
 In the event that these were not the case, the system would continually attempt to recover to a point which inevitably leads to fault, a possible solution to this would be to continually recover at earlier points in time, however this does not provide resilience against fault-causing data which happens to be input to the system anyway.
 
 The frequency of checkpointing facilitates a tradeoff between performance and robustness.
-On the one hand checkpointing must exceed the frequency of faults, and the more frequent the checkpointing is, the less computation is lost when the system must rollback from a fault.
-That said computation is used to facilitate the checkpointing, and excessively saving state takes processor time away from actor computation, which reduces the expected number of invocations between faults.
+If we checkpoint frequently we expend alot of computation on the checkpointing itself, however our backups of the system are more up-to-date.
+On the other hand rarer checkpointing saves computation on checkpointing itself but means that in the event of a fault, the system-wide rollback will cause alot of wasted computation.
 The SDFSimulator takes the simple approach to checkpointing and saves state once every steady state execution.
 The expected costs of using checkpointing is calculated in Chapter \ref{chapModel} using the presumption of one checkpoint per steady-state iteration.
 
@@ -111,12 +111,13 @@ However, with simple modifications to the code, any stateful actor can be conver
 This simplification allows us to ignore the existence of stateful actors and only record the content of memory buffers.
 
 Detection and recovery form an important part of the simulation.
-First the simulator cant use its oracular powers of knowing when a fault has occurred.
+First the simulator cannot use its oracular powers of knowing when a fault has occurred.
 The worker-threads described in Section \ref{secSystemComponents} can record faults in the other threads both upstream and downstream from themselves.
 Faults upstream lead to starvation of the communication channels.
 The simulator, and any steady state schedule, can make the guarantee that any invoked actor should have sufficient tokens to execute, however this is not the case when faulting actors fail to fill those buffers.
-Faults downstream break communication protocols, or put simply faulting actors don't acknowledge TCP packets during communication.
-For simplicity we can think of the consuming actor as hosting a connection and the producing actor as making the remote connection, which means we would expect an acknowledgement from the host when we send data.
+Faults downstream break communication protocols, or put simply faulting actors do not acknowledge TCP packets within a set time after the communication.
+This method, called {\em timeout} is used commonly to detect interrupted connections in TCP.
+For simplicity, we can think of the consuming actor as hosting a connection and the producing actor as making the remote connection, which means we would expect an acknowledgement from the host when we send data.
 This behaviour is modelled in the simulator.
 
 Once detected, faults must be recovered from, which involves rolling back to the last checkpoint.
@@ -133,13 +134,15 @@ Replication FT tries to ensure the continued execution of parts of the system de
 Before the network is executed or even assigned, each actor is duplicated several times, all of which perform the same computation.
 During assignment, we ensure that duplicates do not run on the same processor.
 This means that if one processor dies, there are still duplicates of the actors on that processor running elsewhere.
-Under pathological cases this mechanism does not guarantee fault-less execution, however this requires the statistically improbable faulting of all computers hosting duplicates of the same actor.
+Under pathological cases this mechanism does not guarantee fault-less execution.
+To meet this guarantee requires recovery schemes which this thesis does not discuss.
+Though the system failing requires the statistically improbable faulting of all computers hosting duplicates of the same actor.
 As a result, this method is only viable due to over-provision of processors and having many duplicates.
 
 One important consideration with duplicates is how to facilitate communication.
 There are several ways we can handle this, one is to not duplicate communication.
 Under this scheme all actors are duplicated the same number of times and communicate in parallel only with the correct duplicate.
-In affect we treat the entire SDF computation as a single program and run it several times in parallel.
+In effect we treat the entire SDF computation as a single program and run it several times in parallel.
 This causes a linear increase in communication volume, however the entire duplicate network can be broken by faulting a single actor.
 This means the system is only more resilient (the probability of failing is lowered) by a relatively small amount.
 We can make a tradeoff on communication to gain significantly higher resilience, by making each duplicate send data to all the duplicates of the next.
@@ -168,7 +171,7 @@ The results are either that a computer in the network crashes and stops working,
 In the simulator the computers are replaced with worker threads and the wires by FIFO buffers, so they must become the targets of our simulated faults.
 Wiring faults, or communication faults, are simulated by blocking writes to the FIFO buffers.
 This will cause both the producing and consuming actors to flag the other as faulted (the consumer starves and the producer receives no acknowledgement).
-This is expected behaviour, since the inability of two computers to communicate with each other makes them both unsuitable for use.
+This is the expected behaviour, since the inability of two computers to communicate with each other makes them both unsuitable for use.
 Computer faults are simulated by terminating worker threads.
 This will cause actors upstream and downstream of the fault to flag it.
 Again such behaviour is expected.
@@ -177,7 +180,7 @@ The frequency of faults is dealt with on a per-experiment basis.
 Experiments which emulate real computations are difficult to run on the simulator, as they require thousands of worker threads each with simulated up-times of $10^5$ hours.
 The probability of faults is skewed to greater frequency so as to examine the effects of single faults on the network.
 Faults can also be scripted to occur at certain times or on certain threads, again this is used for experimentation and reproducibility reasons.
-We accept the slightly unrealistic frequency of faulting in these cases because we aren't concerned in this thesis with the vast majority of real-world computations which run flawlessly.
+We accept the slightly unrealistic frequency of faulting in these cases because we are not concerned in this thesis with the vast majority of real-world computations which run flawlessly.
 This work aims to analyse the resilience of fault tolerance mechanisms to faults and their overhead costs, the question of whether these tradeoffs are acceptable given the frequency of faults is debatable.
 
 \section{Statistical Measurements}
@@ -188,18 +191,18 @@ Recorded figures includes actual data from the execution of the SDF network in t
 These recoded figures are important in their own right, but they are also used to estimate the metrics in Section \ref{secSystemMetrics}.
 
 \begin{itemize}
-	\item {\bf Token counts} simply record the number of tokens passed around the SDFSimulator.
+	\item {\em Token counts} simply record the number of tokens passed around the SDFSimulator.
 			These counts do not actually indicate the volume of data transferred, however they are useful for judging the overheads associated with the different FT mechanisms.
 			This includes every FIFO buffer and every token passed between every pair of actors.
-	\item {\bf Invocation counts} record the number, and order, of actor invocations.
+	\item {\em Invocation counts} record the number, and order, of actor invocations.
 			Invocation count is not particularly interesting except again in analysing how the FT mechanisms affect the system.
-	\item {\bf Fault counts} are recorded to ensure reproducibility and fairness in experiments.
+	\item {\em Fault counts} are recorded to ensure reproducibility and fairness in experiments.
 			This figure also records where and when the fault was simulated, and if/how it was detected by the network.
-	\item {\bf Recovery time} is recorded to put some real world figures on the overheads of recovery.
+	\item {\em Recovery time} is recorded to put some real world figures on the overheads of recovery.
 			Like the other recorded timings, this time does not represent real-world numbers, as it all takes place in a simulator.
-	\item {\bf Steady-State execution time} is used in conjunction with the recorded recovery time.
+	\item {\em Steady-State execution time} is used in conjunction with the recorded recovery time.
 			Though they are both recording times in a simulator, and therefore inaccurate, together they can be used to gauge the relative difference in times associated with a recovery and with a normal execution.
-	\item {\bf Average execution time} is similar to the above but accounts for disparity in the execution times of different steady-state invocations.
+	\item {\em Average execution time} is similar to the above but accounts for disparity in the execution times of different steady-state invocations.
 \end{itemize}
 
 \subsection{Metrics}
@@ -209,15 +212,16 @@ Not all real world figures can be recorded in the simulator.
 Importantly the major indicators, bandwidth and makespan, must be estimated using combinations of the above recordings and some assumptions.
 
 \begin{itemize}
-	\item {\bf Makespan} is a function of invocation counts and assumed execution times for each actor.
+	\item {\em Makespan} is a function of invocation counts and assumed execution times for each actor.
 			Understandably these times must be estimated using real world tests and knowledge of the target architectures.
 			During the assignment stage estimates of these times are required anyway, so it is reasonable to assume that the simulator can make use of them.
-	\item {\bf Bandwidth} is a function of token counts and assumed token sizes, as well as some communication overheads.
-			Again this estimate requires some knowledge of the target system (MPI, TCP) to account for the overheads and again this knowledge had to be available to assign the processors, so we are allowed to make use of it here.
-	\item {\bf Communication time} is similar to bandwidth, it must be estimated using the bandwidth estimate and communication throughput figures.
+	\item {\em Bandwidth} is a function of token counts and assumed token sizes, as well as some communication overheads.
+			Again this estimate requires some knowledge of the target system to account for the overheads and again this knowledge had to be available to assign the processors, so we are allowed to make use of it here.
+	\item {\em Communication time} is similar to bandwidth, it must be estimated using the bandwidth estimate and communication throughput figures.
 			Unsurprisingly this information was required before we assigned actors to their processors so using it to estimate communication time is not unreasonable.
 \end{itemize}
 
+\noindent
 These metrics make use of some assumptions about the system that are broadly reasonable.
 The precise nature of the assumptions will vary depending on the experiment being run.
 
@@ -250,58 +254,56 @@ Our example is using a randomly generated cloud machine specification and unit c
 For a real assignment we would use our AMPL model or a heuristic to determine the assignment.
 To use the GLPK we write these matrices to a .dat file and run glpsol on this data using the model described in Chapter \ref{chapModel}.
 Once solved we read in the assignment from the output of glpsol.
-
-However since we know that all actors are the same, and all communicating channels carry the same information, we can simplify the assignment process by spreading actors evenly over the computers.
-Assignment done manually in this way doesn't affect the later stages of the simulation, however if replication FT is being used then we must ensure the non-overlapping duplicates constraint is upheld.
+However, since we know that all actors are the same, and all communicating channels carry the same information, we can simplify the assignment process by spreading actors evenly over the computers.
+Assignment done manually in this way does not affect the later stages of the simulation, however if replication FT is being used then we must ensure the non-overlapping duplicates constraint is upheld.
 
 Once assigned, the simulator spawns a worker thread for each of its actors (or duplicates) and places them in the work queue.
 The worker thread is also told how many times each actor should execute per steady state invocation.
-Finally a FIFO buffer is made for each communication channel.
+Finally, a FIFO buffer is made for each communication channel.
 These buffers are stored as class wide variables, so all worker threads can access them.
 If applicable, the initial delays for the network are injected into the right buffers.
 
 \subsection{Execution}
 
 The executor now begins the process of allowing worker threads to run.
-We begin by performing quick initialisation for our network by saturating it.
-The process is quite simple, while a channel whose producer can execute is not saturated, execute the producer.
+We begin by performing quick initialisation for our network by saturating it (see Section \ref{BACK_SYNC}).
+The process is quite simple: while a channel whose producer can execute is not saturated, execute the producer.
 Not all networks are able to be saturated in this way, however our example is so the simulator is told to do so.
 
-Once saturated each worker thread can execute its actors in any order with any interleaving, so long as they halt after each steady-state execution.
+Once saturated, each worker thread can execute its actors in any order with any interleaving, so long as they halt after each steady-state execution.
 The executor gives the instruction for all workers to proceed through a single steady-state.
-To do this each worker executes its actors in any order, in our case each actor will be executed once.
-For networks which are not amenable to saturation, the execution schedule is based on availability.
+To do this, each worker executes its actors in any order, in our case each actor will be executed once.
+For networks which are not amenable to saturation, the execution schedule is based on availability, that is, a node executes if there are enough tokens in its input channels to do so and it hasnt already exceeded the repetition amount.
 
-The execution of a single actor is based on the code we wrote for them.
-The input node generates a new set of items to be sorted.
+The execution of a single actor is based on the code we write for them.
+For the bitonic sort, the input node generates a new set of items to be sorted.
 The output node reads a set of items and ensures they are sorted.
-The intermediate nodes read one token from each of 2 channels, then write the lesser token to their ``upper'' channel and the greater to their ``lower'' channel.
+The intermediate nodes read one token from each of their two input channels, then write the lesser token to their ``upper'' channel and the greater to their ``lower'' channel.
 Reading and writing to channels involves making a call to the executor to enqueue or dequeue a token in the right FIFO buffer.
 The executor may refuse to do this if it is simulating a wire failure or the processor at the ``end'' of that channel is supposed to have faulted.
-
 This continues possibly indefinitely.
 
 \subsection{Fault Analysis}
 
-During execution we will probably decide to simulate a fault, and how our working example responds will depend on the fault and the kind of FT mechanism being used.
-Faults come in two main varieties, wire failures and computer failures.
-When a wire failure is being simulated the executor will refuse to write tokens to the broken channel, however it will still read tokens from it until there are none, when it starts returning null.
-When an actor suspects a wire failure has occurred it flags this by calling a \begin{verbatim}faultDiscovered(processor)\end{verbatim} call to the executor, providing the processor it suspects is faulty as an argument,
-Computer failures are simulated by terminating the worker thread simulating that process, again the executor will refuse to write tokens if the process at the end of the channel is supposed to be dead.
+During execution we inject faults, and how our working example responds will depend on the fault and the kind of FT mechanism being used.
+As has been mentioned previously, faults come in two main varieties: wire failures and computer failures.
+When a wire failure is being simulated, the executor will refuse to write tokens to the broken channel, however, it will still read tokens from it until there are none, when it starts returning null.
+The executor refusing to write emulates timeout detection in the simulator where no low-level communication actually occurs.
+When an actor suspects a wire failure has occurred, it flags this by calling a \verb=faultDiscovered(processor)= call to the executor, providing the processor it suspects is faulty as an argument.
+Computer failures are simulated by terminating the worker thread executing that process, again the executor will refuse to write tokens if the process at the end of the channel is supposed to be dead.
 The faults are flagged by the actors in the same way as wire faults.
 
 If our example is using a checkpoint recovery mechanism, then it must try to recover.
 We presume that after each steady state invocation, the actors were writing the contents of memory buffers they consume from onto disk.
-Faults are discovered usually by upstream actors and flagged to the executor.
-Next a call is made to the executor to spawn a new worker thread.
+After the fault is discovered, a call is made to the executor to spawn a new worker thread.
 The contents of disk are read and the last successful state is retrieved and injected into the worker thread.
 Finally the checkpointed contents of disk are read by every other thread and the whole network rolls back.
-Once rollback is finished an actor on the recovered process will call \begin{verbatim}faultRecovered(processor)\end{verbatim} on the executor to indicate the computation can restart.
+Once rollback is finished an actor on the recovered process will call \verb=faultRecovered(processor)= on the executor to indicate the computation can restart.
 
-If our example is using a replication tolerance mechanism, then recovery is irrelevant.
+If our example is using a replication tolerance mechanism, then our simulator has no mechanism for actual recovery.
 However, our actor executions will be slightly different.
 Each actor is encased in a wrapper which performs the fault detection and token duplication tasks.
 These wrappers are themselves an extension of the inbuilt Actor class, and so are invisible to the simulator itself.
 The wrappers receive multiple tokens for each logical channel they have, they pick one of those and use it as input to the actor they encapsulate, that actor's outputs are read, duplicated, and sent to all the duplicates of the actor at the logical end of that channel.
-These wrappers also flag the executor when faults are detected.
-Once detected they immediately call \begin{verbatim}faultRecovered(processor)\end{verbatim} if there are still duplicates executing, otherwise they never recover from the fault and execution terminates.
+These wrappers also flag the executor when faults are detected using the same procedure described above.
+Once detected they immediately call \verb=faultRecovered(processor)= if there are still duplicates executing, otherwise they never recover from the fault and execution terminates.
